syntax = "proto3";

package auth;

option go_package = "pb/auth";

service AuthService{
    rpc Register(RegisterRequest) returns (AuthResponse);
    rpc Login(LoginRequest)returns (AuthResponse);
    rpc ValidateToken(ValidateTokenRequest)returns(AuthResponse);
}

message RegisterRequest{
    string username = 1;
    string password = 2;
}

message LoginRequest{
    string username = 1;
    string password = 2;
}

message ValidateTokenRequest{
    string token = 1;
}

message AuthResponse{
    string message = 1;
    string token = 2;
    bool success = 3;
}